2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkWidget.xs: Document some aspects of Gtk2::Widget::activate
	and set_scroll_adjustments that are relevant to Perl subclasses.
	Patch by Kevin Ryde.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile.PL
	* MANIFEST
	* NEWS
	* README: Unstable release 1.190.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkGC.xs: Refer to release 1.200 (instead of 1.180) in the
	compatibility paragraph about Gtk2::GC->release.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkClipboard.t: Fix test failure that's presumably due to
	get_func being run more often than expected.  Also use
	Gtk2::TestHelper's run_main to replace equivalent Glib::Timeout
	constructs.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* CodeGen.pm (generate_constants_wrappers): Also allow more than
	one tab as a separator between constant name and converter.

2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* CodeGen.pm: Add Gtk2::CodeGen->generate_constants_wrappers which
	creates XSUBs for C constants.

	* Makefile.PL: Use Gtk2::CodeGen->generate_constants_wrappers to
	wrap constants specified in files named constants-x.y.

	* Gtk2.pm
	* t/version-checks.t: Use Exporter to handle version checking and
	exporting.  Test.

	* constants-2.0
	* Gtk2.pm
	* t/00.Gtk2.t: Export GTK_PRIORITY_RESIZE, GDK_PRIORITY_EVENTS,
	and GDK_PRIORITY_REDRAW.

	* constants-2.0
	* Gtk2.pm
	* t/00.Gtk2.t: Export GDK_CURRENT_TIME.

2008-06-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkIconView.t: Fix test failures by not running certain
	unreliable tests.  Also avoid running unnecessary main loops.

2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkWidget.xs: Document why signal_chain_from_overridden
	doesn't quite work when used in a size-request handler.  Patch by
	Kevin Ryde.

	* xs/GtkGC.xs
	* t/GtkGC.t: Automatically handle releasing of GCs returned by